--- a/frontend/src/components/Settings/Settings.css
+++ b/frontend/src/components/Settings/Settings.css
@@ -3,14 +3,16 @@
     z-index: 55;
     top: 65px;
     right: 15px;
-    max-width: 400px;
+    max-width: 450px;
+    width: 380px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 8px;
     border-radius: 23px;
     background-color: #eff1fb;
-    box-shadow: 0px 0px 3px 0.2px #000;
+    border: 2px solid transparent;
+    box-shadow: 0px 0px 5px 0.1px #000;
 }
 
 .settings__manage {
@@ -100,4 +102,17 @@
     border: none;
     align-items: center;
     font-size: 15px;
+}
+
+.settings-footer {
+    padding: 10px 0;
+    font-size: 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+@media (max-width: 480.98px) {
+    .settings {
+        display: none;
+    }
 }
