--- a/frontend/src/components/Settings/Settings.css
+++ b/frontend/src/components/Settings/Settings.css
@@ -10,9 +10,10 @@
     justify-content: center;
     padding: 8px;
     border-radius: 23px;
-    background-color: #eff1fb;
+    background-color: #eaecf7a2;
     border: 2px solid transparent;
-    box-shadow: 0px 0px 5px 0.1px #000;
+    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+    0 2px 6px 2px rgb(60 64 67 / 15%);
 }
 
 .settings__manage {
@@ -68,6 +69,11 @@
     border-radius: 7px;
     font-size: 14px;
     color: #000;
+    transition: .2s;
+}
+
+.manage-button__button:hover {
+    background: #a5a3a32e;
 }
 
 .settings__add {
@@ -81,6 +87,12 @@
     border: none;
     cursor: pointer;
     font-size: 15px;
+    transition: .2s;
+}
+
+.settings__add:hover,
+.settings__logout:hover {
+    background-color: #1b72eb10;
 }
 
 .settings-add__icon,
@@ -105,6 +117,7 @@
     border: none;
     align-items: center;
     font-size: 15px;
+    transition: .2s;
 }
 
 .settings-footer {
