--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -10,7 +10,9 @@
 }
 
 .header-shadow {
-    box-shadow: 1px 1px 3px 0.5px rgb(60, 64, 67, 0.5);
+    /* box-shadow: 1px 1px 3px 0.5px rgb(60, 64, 67, 0.5); */
+    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+    0 2px 6px 2px rgb(60 64 67 / 15%);
 }
 
 .inner__header {
@@ -159,8 +161,8 @@
 
 .icons-avatar {
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
+    width: 32px;
+    height: 32px;
     cursor: pointer;
     box-sizing: content-box;
     border: 4px solid transparent;
@@ -172,9 +174,10 @@
 }
 
 .icons-avatar > img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: cover;
+    object-position: center;
     border-radius: 50%;
 }
 
