--- a/frontend/src/components/AddCourse/AddCourseForm.css
+++ b/frontend/src/components/AddCourse/AddCourseForm.css
@@ -129,5 +129,110 @@ div.confirm-modal {
 
 /* ADD COURSE MODAL */
 
+.add-course {
+    width: 560px;
+    padding: 0;
+}
+
+
+
+
+
+/* ------------ ADD COURSE HEADER */
+
+.add-course__title {
+    margin: 18px 24px 16px 24px;
+
+}
+
+/* ------------ ADD COURSE HEADER */
+
+
+
+
+
+/* ------------ ADD COURSE MAIN */
+
+.add-course__main {
+    padding: 0 24px;
+}
+
+.add-course__input-block {
+    max-width: 100%;
+    position: relative;
+    transition: .1s;
+    border-radius: 5px 5px 0 0;
+    height: 56px;
+    background-color: rgb(241,243,244);
+    display: flex;
+    align-items: center;
+}
+
+.add-course__line {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #5f6368;
+}
+
+.add-course__input-block:hover {
+    background-color: rgba(101, 105, 105, 0.185);
+}
+
+.add-course__input-block:not(:last-child) {
+    margin-bottom: 16px;
+}
+
+.add-course__label {
+    position: absolute;
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: .1s;
+    color: rgb(95,99,104);;
+    pointer-events: none;
+    font-weight: 600;
+}
+
+.add-course__input {
+    width: 100%;
+    border: none;
+    position: relative;
+    font-size: 16px;
+    background: transparent;
+    outline: 0;
+    transition: .2s;
+    padding: 0 20px;
+    top: 10px;
+    height: 100%;
+    transition: .2s;
+}
+
+.add-course__input:focus ~ .add-course__line {
+    border-bottom: 2px solid #1a73e8;
+}
+
+.add-course__input:focus ~ .add-course__label,
+.add-course__input:not(:placeholder-shown) + .add-course__label {
+    top: 14px;
+    color: #1a73e8;
+    font-size: 13px;
+}
+
+/* ------------ ADD COURSE MAIN */
+
+
+
+
+
+/* ------------ ADD COURSE FOOTER */
+
+
+
+/* ------------ ADD COURSE FOOTER */
+
+
+
 
 /* ADD COURSE MODAL */
