--- a/frontend/src/pages/Room/RoomComponents/RoomContent/RoomContent.css
+++ b/frontend/src/pages/Room/RoomComponents/RoomContent/RoomContent.css
@@ -1,9 +1,3 @@
-.room-content {
-    display: flex;
-    align-items: center;
-    margin-top: 24px;
-}
-
 .room-content__aside {
     flex-shrink: 0;
     padding-right: 24px;
@@ -59,43 +53,36 @@
     margin-right: 12px;
 }
 
-.code-block__code-pink {
-    color: rgb(184,6,114);
-    fill: rgb(184,6,114);
+.room-content__expect-block {
+    border: 1px solid #dadce0;
+    border-radius: 8px;
+    width: 195px;
+    padding: 16px;
 }
 
-.code-block__code-green {
-    color: rgb(19, 115, 51);
-    fill: rgb(19, 115, 51);
+.expect-block__title {
+    font-size: 14px;
+    color: #3c4043;
+    padding-bottom: 16px;
 }
 
-.code-block__code-blue {
-    color: rgb(23,78,166);
-    color: rgb(23,78,166);
+.expect-block__expect-tasks > p {
+    color: rgba(0,0,0,.549);
+    font-size: 13px;
 }
 
-.code-block__code-cyan {
-    color: rgb(25,103,210);
-    fill: rgb(25,103,210);
+.expect-block__button-block {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-top: 5px;
 }
 
-.code-block__code-orange {
-    color: rgb(194,100,1);
-    fill: rgb(194,100,1);
+.expect-block__button-block > button {
+    border: none;
+    background: #fff;
+    font-size: 14px;
+    font-weight: 600;
+    cursor: pointer;
+    padding: 5px 5px;
 }
-
-.code-block__code-purple {
-    color: rgb(118,39,187);
-    fill: rgb(118,39,187);
-}
-
-.code-block__code-grey {
-    color: rgb(32,33,36);
-    fill: rgb(32,33,36);
-}
-
-.code-block__code-turquoise {
-    color: rgb(0,123,131);
-    fill: rgb(0,123,131);
-}
-
