--- a/frontend/src/UI/Select/Select.module.css
+++ b/frontend/src/UI/Select/Select.module.css
@@ -52,6 +52,7 @@
     position: relative;
     cursor: pointer;
     padding: 0 16px 0 56px;
+    display: block;
 }
 
 .default-option {
@@ -113,7 +114,7 @@
     align-items: center;
 }
 
-.option-text__tex {
+.option-text__text {
     display: flex;
     flex-flow: column;
     height: 56px;
