--- a/frontend/src/pages/Room/RoomComponents/RoomCreateTask/RoomCreateTask.css
+++ b/frontend/src/pages/Room/RoomComponents/RoomCreateTask/RoomCreateTask.css
@@ -3,7 +3,7 @@
 .room-content__input {
     box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
     border-radius: 8px;
-    margin-bottom: 16px;
+    margin-bottom: 24px;
     min-height: 72px;
     position: relative;
     z-index: 0;
@@ -89,6 +89,10 @@
 
 .create-task__form-course__text {
     margin-bottom: 8px;
+    color: #5f6368;
+    font-weight: 600;
+    line-height: 1.25rem;
+    font-size: 14px;
 }
 
 .create-task__form-course__selects {
@@ -108,127 +112,7 @@
     overflow: hidden;
 }
 
-.move-textarea__block {
-    position: relative;
-    padding: 22px 16px 10px;
-    background: #f8f9fa;
-    border-radius: 4px 4px 0 0;
-}
-
-.create-task__textarea {
-    resize: none;
-    background: transparent;
-    z-index: 55;
-    min-height: 100px;
-    margin-top: 2px;
-    width: 100%;
-    position: relative;
-    overflow-wrap: break-word;
-    outline: none;
-    border: none;
-    font-size: 14px;
-    color: #000000DE;
-    overflow: hidden;
-    height: auto;
-    max-width: 700px;
-}
-
-.create-task__textarea > ul,
-.create-task__textarea > * > ul {
-    width: 100%;
-    list-style: disc;
-    margin: 13px 0;
-    padding-left: 40px;
-}
-
-
-.move-textarea__label {
-    color: #5f6368;
-    position: absolute;
-    top: 24px;
-    left: 0;
-    right: 0;
-    padding-left: 16px;
-    transition: all .3s cubic-bezier(0.4,0,0.2,1);
-    font-size: 16px;
-    transform: translateX(0);
-    transition: .1s;
-}  
-
-.move-textarea__label-focused {
-    transform: scale(0.75) translateX(-115px) translateY(-27px);
-}
-
 /* textarea */
-
-/* underline */
-
-.create-task__textarea-underline {
-    height: 1px;
-    position: absolute;
-    bottom: 0;
-    background: #80868b;
-    right: 24px;
-    left: 24px;
-}
-
-/* underline animations */
-
-.create-task__textarea-underline__focused {
-    height: 2px;
-    z-index: 100;
-    position: absolute;
-    bottom: 0;
-    right: 24px;
-    left: 24px;
-}
-
-.create-task__textarea-underline__focused-enter-active {
-    animation: underline-active .3s cubic-bezier(0.4,0,0.2,1) forwards;
-}
-
-.create-task__textarea-underline__focused-exit-active {
-    animation: underline-disactive .3s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-}
-
-
-@keyframes underline-active {
-    0% {
-        opacity: 0;
-        transform: scaleX(0);
-    }
-
-    100% {
-        opacity: 1;
-        transform: scaleX(1)
-    }
-}
-
-@keyframes underline-disactive {
-    0% {
-        opacity: 1;
-        transform: scaleX(1);
-    }
-
-    100% {
-        opacity: 0;
-        transform: scaleX(1);
-    }
-}
-
-/* underline animations */
-
-/* underline */
-
-/* modify textarea */
-
-.create-task__modify-textarea {
-    background-color: #f8f9fa;
-    display: flex;
-}
-
-/* modify textarea */
-
 
 
 
@@ -246,6 +130,16 @@
 .create-task__links {
     margin: 0 16px 16px 0;
     flex-grow: 1111;
+    display: flex;
+    align-items: center;
+}
+
+.create-task__links-inner {
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 1;
 }
 
 .create-task__submit {
@@ -256,12 +150,29 @@
     margin: 0 16px 16px 0;
 }
 
-.create-task__links-inner {
-    height: 48px;
+/* submit buttons */
+
+.create-task__submit-cancel {
+    margin-right: 24px;
+}
+
+.create-task__submit-cancel__text {
+    padding: 0 8px;
+    -webkit-box-align: center;
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-right: 1;
+    cursor: pointer;
+    color: #5f6368;
+    font-weight: 600;
+    font-size: 14px;
+    transition: .1s;
+    line-height: 36px;
 }
+
+.create-task__submit-cancel__text:hover {
+    background: #5f63681a;
+}
+
+/* submit buttons */
 
 /* submit or cancel block */
